# packages/common/src/types/index.ts
@@ -34,6 +34,11 @@ export interface TileDetails extends TileParamsWithKit {
   geoshape: string;
 }
 
+export interface TileQueryResponse {
+  tiles: TileDetails[];
+  cursor?: number;
+}
+
 export interface TileDetailsPayload {
   timestamp: number;
   state?: number;
@@ -41,7 +46,7 @@ export interface TileDetailsPayload {
 }
 
 export interface BaseQueryParams {
-  from?: number;
+  cursor?: number;
   size?: number;
 }
 
